--- a/src/pages/MainPage/components/right-side/RightSide.css
+++ b/src/pages/MainPage/components/right-side/RightSide.css
@@ -60,7 +60,7 @@
   font-size: 16px;
   line-height: 32px;
   /* identical to box height, or 200% */
-  width: 70%;
+  width: 80%;
   color: rgba(77, 77, 92, 0.6);
 }
 
@@ -107,6 +107,19 @@
   flex-direction: column;
   align-items: center;
   margin-top: 25px;
+}
+
+.mainPageRightSideUploadFile h3 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 160%;
+  color: #20262C;
+}
+
+.mainPageRightSideUploadFile h3 span {
+  color:#1890ff;
+  display: block;
 }
 
 .mainPageRightSideUploadFileBox {
@@ -172,8 +185,7 @@
 
 /* Buttons */
 .audioActionBtn {
-  padding: 2px 6px;
-  margin-right: 8px;
+  padding: 2px 15px;
   width: max-content;
   height: max-content;
   background: #ffffff;
@@ -182,7 +194,7 @@
   border-radius: 4px;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 20px;
   /* identical to box height, or 143% */
   cursor: pointer;
