--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -2,56 +2,81 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   background: #ffffff;
   padding: 24px 48px;
   box-shadow: 0px 2px 4px -2px rgba(24, 39, 75, 0.12);
 }
 
 .headerRightSide {
-    display: flex;
-    flex-direction: row;
-    gap: 32px;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  align-items: center;
 }
 
 .header button {
-    display: flex;
-flex-direction: row;
-align-items: center;
-padding: 16px 22px;
-gap: 4px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 16px 22px;
+  gap: 4px;
 
-width: max-content;
-height: max-content;
+  width: max-content;
+  height: max-content;
 
-background: rgba(32, 112, 244, 0.12);
-border-radius: 80px;
+  background: rgba(32, 112, 244, 0.12);
+  border-radius: 80px;
 
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 16px;
-/* identical to box height, or 100% */
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 16px;
+  /* identical to box height, or 100% */
 
-text-align: center;
-text-transform: capitalize;
-border: none;
-color: #2070F4;
-cursor: pointer;
+  text-align: center;
+  text-transform: capitalize;
+  border: none;
+  color: #2070f4;
+  cursor: pointer;
 }
 
 .header p {
-    font-style: normal;
-font-weight: 500;
-font-size: 15px;
-line-height: 24px;
-/* identical to box height, or 160% */
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  /* identical to box height, or 160% */
 
-text-align: center;
-letter-spacing: 0.25px;
+  text-align: center;
+  letter-spacing: 0.25px;
 
-/* Gray 10 */
+  /* Gray 10 */
 
-color: #20262C;
+  color: #20262c;
+}
+
+.beta {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 16px 22px;
+  gap: 4px;
+
+  width: max-content;
+  height: max-content;
+
+  background: rgba(32, 112, 244, 0.12);
+  border-radius: 80px;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 16px;
+  /* identical to box height, or 100% */
+
+  text-align: center;
+  text-transform: capitalize;
+  border: none;
+  color: #1890ff;
+  cursor: pointer;
 }
